@@ -1,3 +1,7 @@
+2005-11-29 Maverson Eduardo Schulze Rosa <maverson@gmail.com>
+       * test-mbas.pl: Parsing Test Files in order to find necessary
+       compilerOptions and generate the correct CompileCommand.
+
 2005-11-28 Maverson Eduardo Schulze Rosa <maverson@gmail.com>
  	* decl.cs: Avoid to stop searching for class members after encountering
   	the first member, in order to find the inherited or overloaded members.
